--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Launch QkartSanity",
+            "request": "launch",
+            "mainClass": "QKART_SANITY_LOGIN.Module1.QkartSanity",
+            "projectName": "app"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - QkartSanity",
             "request": "launch",
             "mainClass": "QKART_SANITY_LOGIN.QkartSanity"
